--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
  
+<head>
+  <title>William Gentry</title>
+</head>
 <body>
   <h1>William Gentry</h1>
-<!--   <p>Welcome to my website!</p> -->
-<!--   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" /> -->
+  <h2>Under Development</h2>
 </body>
  
 </html>
