--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  
 <head>
   <title>William Gentry</title>
+  <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
   <h1>William Gentry</h1>
