--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  
 <head>
   <title>William Gentry</title>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
