Updated Professional Experience

--- a/index.html
+++ b/index.html
@@ -251,10 +251,11 @@
               <h5>2020 - Present</h5>
               <p><em>Raytheon Technologies, Goleta, CA</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Created utility application to automate the installation of device drivers and configuration of the OS.</li>
+                <li>Assisted in the development and testing of an automated serial programming system.</li>
+                <li>Maintained commercial embedded system and instrumentation software for radar related systems written in <strong>Ada</strong> and <strong>C++</strong>.</li>
+                <li>Designed and developed <strong>.NET Core WPF C#</strong> desktop application for data visualization of complex antenna characteristics.</li>
+                <li>Effectively communicated in cross-functional teams composed of system and electrical engineers.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -262,10 +263,9 @@
               <h5>2019</h5>
               <p><em>General Motors, Detroit, MI</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Collaborated with process engineers in powertrain manufacturing engineering to retool assembly and test equipment.</li>
+                <li>Implemented process improvements for increased efficiency and quality.</li>
+                <li>Enabled automated tracking and tracing of product assembly by creating data records and Allen-Bradley PLC control logic.</li>
               </ul>
             </div>
           </div>
