Update Background Image

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <h4>UC Davis (NATCAR) 2019</h4>
                 <p>
                   <!-- <i class="bx bxs-quote-alt-left quote-icon-left"></i> -->
-                  In a competition between many University of California Schools, my team one first place. TODO
+                  In a competition between many University of California Schools, my team won first place. TODO
                   <!-- <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
                 </p>
               </div>
