Add mailto link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="social-links">
         <a href="https://github.com/whgentry" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/william-gentry-47a349164/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="mailto:williamharrisgentry@gmail.com"><i class="bx bxs-envelope"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -101,10 +102,11 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li> -->
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(530) 526 7512</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>williamharrisgentry@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Santa Barbara, CA</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone -</strong> <span>(530) 526 7512</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email -</strong> <span>williamharrisgentry@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City -</strong> <span>Santa Barbara, CA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>B.S. -</strong> <span>Electrical and Computer Engineering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>M.S. -</strong> <span>Computer Science <em>(in progress)</em></span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -117,7 +119,7 @@
             </div>
             <p>
               Software Engineer with broad experience in developing embedded
-              systems and desktop applications. Excellent at the visualization
+              systems and desktop applications. Proficient at the visualization
               of complex software architecture concepts and skilled at
               implementation. In-depth understanding of computer architecture
               and high-level object-oriented design. Strong problem-solving
@@ -237,7 +239,7 @@
               <h4>Master of Science in Computer Science</h4>
               <h5>2021 - Present</h5>
               <p><em>Georgia Institute of Technology, Atlanta, GA</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Emphasis in Machine Learning</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science: Computer &amp; Electrical Engineering</h4>
@@ -276,13 +278,13 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Projects Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Projects</h2>
+          <p>Personal and Team software projects.</p>
         </div>
 
         <div class="row">
@@ -300,7 +302,8 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <!-- <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""> -->
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
@@ -430,7 +433,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Awards Section ======= -->
-    <section id="facts" class="facts">
+    <!-- <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -475,7 +478,7 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section>End Facts Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -630,19 +633,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Santa Barbara, CA</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p><a href="mailto:williamharrisgentry@gmail.com">williamharrisgentry@gmail.com</a></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 530 526 7512</p>
               </div>
 
             </div>
@@ -687,10 +690,11 @@
   <footer id="footer">
     <div class="container">
       <h3>William Gentry</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Check out my projects on GitHub or connect with me on LinkedIn.</p>
       <div class="social-links">
         <a href="https://github.com/whgentry" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/william-gentry-47a349164/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="mailto:williamharrisgentry@gmail.com"><i class="bx bxs-envelope"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>William Gentry</span></strong>. All Rights Reserved
