--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -50,7 +50,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <iframe width="720" height="400" src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
                 <div class="swiper-slide">
