--- a/projects/project-details-natcar.html
+++ b/projects/project-details-natcar.html
@@ -54,11 +54,11 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="../assets/img/portfolio/project-natcar-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="../assets/img/portfolio/project-natcar-2.jpg" alt="">
                 </div>
 
               </div>
@@ -70,14 +70,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Electrical and Computer Engineering</li>
+                <li><strong>Organization</strong>: UC Davis</li>
+                <li><strong>Project date</strong>: May 2019</li>
+                <li><strong>Project GitHub</strong>: <a href="https://github.com/whgentry/NATCAR" class="external-link">github.com/whgentry/NATCAR</a></li>
+                <li><strong>Competition Details</strong>: <a href="https://ece.ucdavis.edu/natcar" class="external-link">ece.ucdavis.edu/natcar</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Autonomous Vehicle - Senior Design Project</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
