--- a/projects/project-details-natcar.html
+++ b/projects/project-details-natcar.html
@@ -49,11 +49,13 @@
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <iframe width="720" height="400" src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="swiper-slide" height="100%">
+                  <div style="position:relative; width:100%; height: 0; padding-bottom: 57%;">
+                  <iframe style="position:absolute; width:100%; height:100%; left: 0; top: 0;" src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
                 </div>
 
-                <div class="swiper-slide">
+                <div class="swiper-slide"> 
                   <img src="../assets/img/portfolio/project-natcar-1.jpg" alt="">
                 </div>
 
