--- a/projects/project-details-natcar.html
+++ b/projects/project-details-natcar.html
@@ -50,8 +50,8 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide" height="100%">
-                  <div style="position:relative; width:100%; height: 0; padding-bottom: 57%;">
-                  <iframe style="position:absolute; width:100%; height:100%; left: 0; top: 0;" src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="fullsize-iframe">
+                    <iframe src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                 </div>
 
