--- a/projects/project-details-natcar.html
+++ b/projects/project-details-natcar.html
@@ -14,7 +14,9 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -51,11 +53,13 @@
 
                 <div class="swiper-slide" height="100%">
                   <div class="fullsize-iframe">
-                    <iframe src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/17qy2T9DwY4" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen></iframe>
                   </div>
                 </div>
 
-                <div class="swiper-slide"> 
+                <div class="swiper-slide">
                   <img src="../assets/img/portfolio/project-natcar-1.jpg" alt="">
                 </div>
 
@@ -75,14 +79,23 @@
                 <li><strong>Category</strong>: Electrical and Computer Engineering</li>
                 <li><strong>Organization</strong>: UC Davis</li>
                 <li><strong>Project date</strong>: May 2019</li>
-                <li><strong>Project GitHub</strong>: <a href="https://github.com/whgentry/NATCAR" class="external-link">github.com/whgentry/NATCAR</a></li>
-                <li><strong>Competition Details</strong>: <a href="https://ece.ucdavis.edu/natcar" class="external-link">ece.ucdavis.edu/natcar</a></li>
+                <li><strong>Project GitHub</strong>: <a href="https://github.com/whgentry/NATCAR"
+                    class="external-link">github.com/whgentry/NATCAR</a></li>
+                <li><strong>Competition Details</strong>: <a href="https://ece.ucdavis.edu/natcar"
+                    class="external-link">ece.ucdavis.edu/natcar</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Autonomous Vehicle - Senior Design Project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Our team of 3 designed an autonomous vehicle by utilizing an
+                OpenMV microcontroller, computer vision, control system theory,
+                and custom circuit board. I created a custom PCB in Altium
+                Designer and developed the mechanical component mounts in Fusion
+                360. I developed Python libraries for interfacing with Bluetooth
+                modules over UART and motor controllers with GPIO. I partnered
+                with my team members to design the control logic and perform
+                vehicle testing.
               </p>
             </div>
           </div>
@@ -95,7 +108,8 @@
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/aos/aos.js"></script>
