Add EE-Emerge Project

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Personal and Team software projects.</p>
+          <p>Personal and Team Software Projects.</p>
         </div>
 
         <div class="row">
@@ -306,11 +306,25 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-natcar.jpg" class="img-fluid" alt="Project NATCAR">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>NATCAR</h4>
+                <p>Undergrad Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-natcar.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="NATCAR"><i class="bx bx-plus"></i></a>
                   <a href="projects/project-details-natcar.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-undegrad">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-ee-emerge-1.jpg" class="img-fluid" alt="EE Emerge">
+              <div class="portfolio-info">
+                <h4>EE Emerge</h4>
+                <p>Undergrad Project</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-ee-emerge-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="EE-Emerge"><i class="bx bx-plus"></i></a>
+                  <a href="projects/project-details-ee-emerge.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
