Fix links in project details pages

--- a/projects/project-details-ee-emerge.html
+++ b/projects/project-details-ee-emerge.html
@@ -86,7 +86,7 @@
                 <li><strong>Organization</strong>: UC Davis</li>
                 <li><strong>Project date</strong>: April 2018</li>
                 <li><strong>Project Details</strong>: <a href="https://ece.ucdavis.edu/ee-emerge"
-                    class="external-link">ece.ucdavis.edu/ee-emerge</a></li>
+                    class="external-link" target="_blank">ece.ucdavis.edu/ee-emerge</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
