--- a/projects/project-details-natcar.html
+++ b/projects/project-details-natcar.html
@@ -80,9 +80,9 @@
                 <li><strong>Organization</strong>: UC Davis</li>
                 <li><strong>Project date</strong>: May 2019</li>
                 <li><strong>Project GitHub</strong>: <a href="https://github.com/whgentry/NATCAR"
-                    class="external-link">github.com/whgentry/NATCAR</a></li>
+                    class="external-link" target="_blank">github.com/whgentry/NATCAR</a></li>
                 <li><strong>Competition Details</strong>: <a href="https://ece.ucdavis.edu/natcar"
-                    class="external-link">ece.ucdavis.edu/natcar</a></li>
+                    class="external-link" target="_blank">ece.ucdavis.edu/natcar</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
